objects/APTS_Cart_Product_Breakdown__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Assembly__c</fullName>
        <label>Assembly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Attachment__c</fullName>
        <label>APTS_Attachment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>APTS_BusinessObjectId__c</fullName>
        <description>Id of the Agreement or Quotation business object</description>
        <externalId>true</externalId>
        <label>Business Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CPB_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>CPB External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Carpenteria__c</fullName>
        <description>Additional field needed on the Italian Template</description>
        <label>Carpenteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Clarifications__c</fullName>
        <label>Clarifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Comment__c</fullName>
        <description>Req-5790, This field is used to manage the text fields in Bulk Upload file at line level</description>
        <label>Bulk Upload Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Line_Item__c</fullName>
        <label>Configuration Line Item</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Reference_Id__c</fullName>
        <label>Configuration Reference Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Status__c</fullName>
        <label>Configure Status</label>
        <picklist>
            <picklistValues>
                <fullName>Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Product_Code__c</fullName>
        <label>Customer Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension__c</fullName>
        <description>Additional field needed on the Italian Template</description>
        <label>Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_E_Design_Reference_Id__c</fullName>
        <description>This Formula is used to Convert the Date/Time to text format</description>
        <formula>APTS_Configuration_Reference_Id__c+APTS_E_Design_Time_stamp__c</formula>
        <label>E Design Reference Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_E_Design_Time_stamp__c</fullName>
        <description>This is used to Convert the Date/Time to text format</description>
        <label>E Design Time stamp</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APTS_Exclusions__c</fullName>
        <label>Exclusions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Explanations__c</fullName>
        <label>Explanations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_ExtConfigDt__c</fullName>
        <description>External Configuration Date</description>
        <label>Configuration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Configurator_System_Id__c</fullName>
        <label>Local Configurator System Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_ID__c</fullName>
        <label>MSPA_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <label>Net Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Product__c</fullName>
        <label>Parent Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product which has been loaded by Bulkupload or Web API</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cart Product Breakdowns</relationshipLabel>
        <relationshipName>Cart_Product_Breakdowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Project_Reference_Id__c</fullName>
        <label>Project Reference Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Description__c</fullName>
        <label>APTS_Proposal_Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Quadro__c</fullName>
        <description>Additional field needed on the Italian Template</description>
        <label>Quadro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Quotation_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Scale_Type__c</fullName>
        <label>Scale Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Section_Count__c</fullName>
        <description>This field is created to store section count information and display it on template. this was created in R4 maintenance</description>
        <label>Section Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Shape__c</fullName>
        <label>Shape</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Timestamp__c</fullName>
        <description>Needs to be the same for all entries inside the configuration</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Exclusion__c</fullName>
        <label>General Exclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Sequence__c</fullName>
        <inlineHelpText>used in edesign for section sequence</inlineHelpText>
        <label>Section Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Needs to be the same for all entries inside the configuration</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <label>Cart Product Breakdown</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_Configuration_Reference_Id__c</columns>
        <columns>NAME</columns>
        <columns>APTS_Section__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Quantity__c</columns>
        <columns>APTS_Discount_Type__c</columns>
        <columns>APTS_Discount__c</columns>
        <columns>APTS_Net_Price_Override__c</columns>
        <columns>APTS_Net_Price__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Massimo_s_Records</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>APTS_Configuration_Reference_Id__c</columns>
        <columns>APTS_Local_Configurator_System_Id__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Discount_Type__c</columns>
        <columns>APTS_Discount__c</columns>
        <columns>APTS_Project_Reference_Id__c</columns>
        <columns>APTS_Section__c</columns>
        <columns>APTS_Net_Price__c</columns>
        <columns>APTS_Configuration_Line_Item__c</columns>
        <columns>APTS_CPB_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Massimo Signori</value>
        </filters>
        <label>Massimo&apos;s Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>temp</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configuration_Line_Item__c</columns>
        <columns>APTS_Configuration_Reference_Id__c</columns>
        <columns>APTS_Discount__c</columns>
        <columns>APTS_Discount_Type__c</columns>
        <columns>APTS_Local_Configurator_System_Id__c</columns>
        <columns>APTS_Net_Price__c</columns>
        <columns>APTS_Net_Price_Override__c</columns>
        <columns>APTS_Project_Reference_Id__c</columns>
        <columns>APTS_Quantity__c</columns>
        <columns>APTS_Section__c</columns>
        <columns>APTS_ExtConfigDt__c</columns>
        <columns>APTS_Label__c</columns>
        <columns>APTS_Section_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Configuration_Reference_Id__c</field>
            <operation>equals</operation>
            <value>51b5230c-0588-462b-8068-4fadf2eab965</value>
        </filters>
        <label>temp</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CPB-{0000000000}</displayFormat>
        <label>Cart Product Breakdown Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Product Breakdowns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>